[package]
name = "dag"
version = "0.1.0"
authors = ["Anxhul10"]
license = "MIT"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
glob = "0.3.3"
neon = "1.1"
serde_json = "1.0.149"
